MSEARCH-468 Updated to jdk 17 (#323)
* Increased Java version to 17

* Code enriched with some Java 17 features

* MSEARCH-468 Code smells corrected